--- a/packages/manual/docs/Button.mdx
+++ b/packages/manual/docs/Button.mdx
@@ -1,20 +1,17 @@
 ---
-sidebar_position: 2
+sidebar_position: 3
 ---
 
 import {Button} from '@bbki.ng/components';
+import {Demo} from '../src/components/Demo';
 
 # Button
 
-## Types
-### Default
-<Button>Foo</Button>
-
-### Primary
-<Button type="primary">Bar</Button>
-
-### Danger
-<Button type="danger">Baz</Button>
-
-### Disabled
-<Button type="disabled">Hello</Button>
+<Demo>
+  <div style={{ width: 100 }}>
+    <Button>Default</Button>
+    <Button type="primary">Primary</Button>
+    <Button type="danger">Danger</Button>
+    <Button type="disabled">Disabled</Button>
+  </div>
+</Demo>
