fix: link style

--- a/packages/manual/docs/Breadcrumb.mdx
+++ b/packages/manual/docs/Breadcrumb.mdx
@@ -4,4 +4,4 @@ sidebar_position: 3
 
 import {BreadcrumbDemo} from '../src/components/Demos/BreadcrumbDemo';
 
-[//]: # (<BreadcrumbDemo />)
+<BreadcrumbDemo />
