docs: update docs

--- a/packages/manual/blog/2022-07-30-logo.mdx
+++ b/packages/manual/blog/2022-07-30-logo.mdx
@@ -12,6 +12,20 @@ import { Img, Article } from '@bbki.ng/components';
 
 <Img {...OSS_PHOTOS.logoPreview} renderedWidth={200} removeBlurBgAfterLoad />
 
+### 制作步骤
+1. 绘制草稿
+
+<Img {...OSS_PHOTOS.logoSketch} removeBlurBgAfterLoad />
+
+2. 绘制参考线
+
+<Img {...OSS_PHOTOS.guidelines} removeBlurBgAfterLoad />
+
+3. 填充颜色
+
+<Img {...OSS_PHOTOS.logoAndGuidelines} removeBlurBgAfterLoad renderedWidth={300} />
+
+
 ### 目的
 
 以下规范用于保证网站标识使用时，能得到最佳视觉效果。
