--- a/packages/site/src/articles/cousin.mdx
+++ b/packages/site/src/articles/cousin.mdx
@@ -8,8 +8,8 @@ tags:
 
 车内循环播放着《冻结》。这首歌出现在林俊杰首张专辑《乐行者》中，发行于 2003 年。当时我在堂兄家过暑假。那张专辑里堂兄循环最多的歌曲是《就是我》。他循环太多遍，还是小学生的我无意间听会，二十年后还是能想起一些歌词、旋律。
 
-2003 年过暑假、堂兄长大的地方叫种蓄场。有大片橘树林，兔舍，猪舍，小鸡孵化厂房。还有只在学校见过的铁门和围墙。在老家，一到天黑小孩会被催着回家；在这里，天黑后大人也放心小孩出门结伴玩耍。他们围着空地烧火，抽烟，吹牛。他们在磨坊里躲迷藏，那里一袋袋玉米在二楼一直堆到天花板上。我记得停在门口大卡车，和它散发出的橡胶轮胎和灰尘金属味道。
+2003 年过暑假、堂兄长大的地方叫种蓄场。有大片橘树林，兔舍，猪舍，小鸡孵化厂房。还有只在学校见过的铁门和围墙。在老家，一到天黑小孩会被催着回家；在这里，天黑后大人也放心小孩出门结伴玩耍。他们围着空地烧火，抽烟，吹牛。他们在磨坊里躲迷藏，那里一袋袋玉米在二楼一直堆到天花板上。我记得停在门口的大卡车，和它散发出的橡胶轮胎和灰尘金属味道。
 
 种蓄场倒闭，伯父去世，伯母改嫁，堂兄结婚生子、大病入院、妻子失踪。全部发生在这二十年间。「弟弟来你家要把你的菜全吃光了」，二十年前，种蓄场的职员这样逗堂兄玩。晚餐的时候，堂兄用筷子截住我伸出的筷子，不让我夹菜。
 
-曾经父母宠爱，无忧无虑的堂兄，现在已经沉默寡言。
+曾经父母宠爱，无忧无虑的堂兄，现在沉默寡言。
