feat: update page layout

--- a/packages/site/src/articles/now.mdx
+++ b/packages/site/src/articles/now.mdx
@@ -1,15 +1,18 @@
 ---
-title: 在干嘛？
+title: ""
 ---
 
 import { MovieList } from "@/components/movie_list";
 import { BookList } from "@/components/book_list";
 
 ## 编码
-- [github](https://github.com/zjhou)
+
+- game dev
 
 ## 阅读
+
 <BookList />
 
 ## 电影
+
 <MovieList />
